--- a/blogpost/blog/templates/blog/about.html
+++ b/blogpost/blog/templates/blog/about.html
@@ -1,4 +1,10 @@
-{% extends 'blog/layout.html' %}
-{% block content %}
-    <h1>About Page</h1>
+{% extends 'blog/layout.html' %} {% block content %}
+<article class="media content-section">
+  <div class="media-body">
+    <div class="article-metadata">
+      <h1>About</h1>
+    </div>
+    <p class="article-content">Place Holder for About Page</p>
+  </div>
+</article>
 {% endblock content %}
