modified dead login route within register template

--- a/blogpost/users/templates/users/register.html
+++ b/blogpost/users/templates/users/register.html
@@ -14,7 +14,7 @@
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
-                Aready Have an account? <a href="#" class="ml-2">Sign In</a>
+                Aready Have an account? <a href="{% url 'login' %}" class="ml-2">Sign In</a>
             </small>
         </div>
     </div>
