--- a/blogpost/blog/templates/blog/layout.html
+++ b/blogpost/blog/templates/blog/layout.html
@@ -35,8 +35,13 @@
               </div>
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
-                <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
-                <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+                {%if not is_loggedin%}
+                  <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+                  <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+                {%else%}
+                  <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+                {%endif%}
+                
               </div>
             </div>
           </div>
