--- a/blogpost/blog/templates/blog/layout.html
+++ b/blogpost/blog/templates/blog/layout.html
@@ -35,7 +35,7 @@
               </div>
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
-                {%if not is_loggedin%}
+                {%if not user.is_authenticated%}
                   <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
                   <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
                 {%else%}
