--- a/blogpost/blog/templates/blog/layout.html
+++ b/blogpost/blog/templates/blog/layout.html
@@ -40,6 +40,7 @@
                   <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
                 {%else%}
                   <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+                  <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                 {%endif%}
                 
               </div>
