--- a/blogpost/users/templates/users/profile.html
+++ b/blogpost/users/templates/users/profile.html
@@ -1,7 +1,14 @@
-{% extends 'blog/layout.html' %}
-{% load crispy_forms_tags %}
-{% block content %}
-    <div class="content-section">
-        <h1> {{ user.username }} </h1>
+{% extends 'blog/layout.html' %}  {% block content %}
+<div class="content-section">
+  <div class="content-section">
+    <div class="media">
+      <img class="rounded-circle account-img" src="{{user.profile.image.url}}"/>
+      <div class="media-body">
+        <h2 class="account-heading">{{ user.username }}</h2>
+        <p class="text-secondary">{{ user.email }}</p>
+      </div>
     </div>
+    <!-- FORM HERE -->
+  </div>
+</div>
 {% endblock content %}
