--- a/blogpost/users/templates/users/profile.html
+++ b/blogpost/users/templates/users/profile.html
@@ -2,7 +2,7 @@
 <div class="content-section">
   <div class="content-section">
     <div class="media">
-      <img class="rounded-circle account-img" src="{{user.profile.image.url}}"/>
+      <img class="rounded-circle account-img" src="{{user.profile.image.url}}" alt="profile_picture"/>
       <div class="media-body">
         <h2 class="account-heading">{{ user.username }}</h2>
         <p class="text-secondary">{{ user.email }}</p>
