--- a/blogpost/users/templates/users/profile.html
+++ b/blogpost/users/templates/users/profile.html
@@ -13,4 +13,15 @@
     </div>
   </div>
 </div>
-{% endblock content %}
+{% for post in posts %}
+
+<article class="media content-section">
+  <div class="media-body">
+    <div class="article-metadata">
+      <small class="text-muted">{{ post.date_posted }}</small>
+    </div>
+    <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+    <p class="article-content">{{ post.content }}</p>
+  </div>
+</article>
+{% endfor %} {% endblock content %}
